RESOLVED FIXED151202
ASSERTION FAILED: newLogicalTop >= logicalTop in WebCore::RenderBlockFlow::getClearDelta
https://bugs.webkit.org/show_bug.cgi?id=151202
Summary ASSERTION FAILED: newLogicalTop >= logicalTop in WebCore::RenderBlockFlow::ge...
Renata Hodovan
Reported 2015-11-12 10:41:38 PST
Created attachment 265408 [details] Test Load the attached test with debug MiniBrowser: <style> * { margin: 345661536cm auto 0; } * { float: left; } </style> <table> <th></th> <td></td> <th></th> <td></td> </table> OS: Ubuntu 15.04 x86_64 Checked build: debug EFL Checked version: 08e34d6 Backtrace: ASSERTION FAILED: newLogicalTop >= logicalTop ../../Source/WebCore/rendering/RenderBlockFlow.cpp(2884) : WebCore::LayoutUnit WebCore::RenderBlockFlow::getClearDelta(WebCore::RenderBox&, WebCore::LayoutUnit) 1 0x7f197403da9f WTFCrash 2 0x7f197a998481 WebCore::RenderBlockFlow::getClearDelta(WebCore::RenderBox&, WebCore::LayoutUnit) 3 0x7f197a99015b WebCore::RenderBlockFlow::estimateLogicalTopPosition(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo const&, WebCore::LayoutUnit&) 4 0x7f197a98d28e WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 5 0x7f197a98d0db WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) 6 0x7f197a98c53f WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 7 0x7f197a95ecf6 WebCore::RenderBlock::layout() 8 0x7f197a93213f WebCore::RenderElement::layoutIfNeeded() 9 0x7f197a99503f WebCore::RenderBlockFlow::insertFloatingObject(WebCore::RenderBox&) 10 0x7f197aba704a WebCore::LineBreaker::skipLeadingWhitespace(WebCore::BidiResolverWithIsolate<WebCore::InlineIterator, WebCore::BidiRun, WebCore::BidiIsolatedRun>&, WebCore::LineInfo&, WebCore::FloatingObject*, WebCore::LineWidth&) 11 0x7f197aba72e7 WebCore::LineBreaker::nextLineBreak(WebCore::BidiResolverWithIsolate<WebCore::InlineIterator, WebCore::BidiRun, WebCore::BidiIsolatedRun>&, WebCore::LineInfo&, WebCore::LineLayoutState&, WebCore::RenderTextInfo&, WebCore::FloatingObject*, unsigned int, WTF::Vector<WebCore::WordMeasurement, 64ul, WTF::CrashOnOverflow, 16ul>&) 12 0x7f197a9af9c1 WebCore::RenderBlockFlow::layoutRunsAndFloatsInRange(WebCore::LineLayoutState&, WebCore::BidiResolverWithIsolate<WebCore::InlineIterator, WebCore::BidiRun, WebCore::BidiIsolatedRun>&, WebCore::InlineIterator const&, WebCore::BidiStatus const&, unsigned int) 13 0x7f197a9af58e WebCore::RenderBlockFlow::layoutRunsAndFloats(WebCore::LineLayoutState&, bool) 14 0x7f197a9b1ed8 WebCore::RenderBlockFlow::layoutLineBoxes(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 15 0x7f197a98d1d5 WebCore::RenderBlockFlow::layoutInlineChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 16 0x7f197a98c51b WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 17 0x7f197a95ecf6 WebCore::RenderBlock::layout() 18 0x7f197a93213f WebCore::RenderElement::layoutIfNeeded() 19 0x7f197a99503f WebCore::RenderBlockFlow::insertFloatingObject(WebCore::RenderBox&) 20 0x7f197aba704a WebCore::LineBreaker::skipLeadingWhitespace(WebCore::BidiResolverWithIsolate<WebCore::InlineIterator, WebCore::BidiRun, WebCore::BidiIsolatedRun>&, WebCore::LineInfo&, WebCore::FloatingObject*, WebCore::LineWidth&) 21 0x7f197aba72e7 WebCore::LineBreaker::nextLineBreak(WebCore::BidiResolverWithIsolate<WebCore::InlineIterator, WebCore::BidiRun, WebCore::BidiIsolatedRun>&, WebCore::LineInfo&, WebCore::LineLayoutState&, WebCore::RenderTextInfo&, WebCore::FloatingObject*, unsigned int, WTF::Vector<WebCore::WordMeasurement, 64ul, WTF::CrashOnOverflow, 16ul>&) 22 0x7f197a9af9c1 WebCore::RenderBlockFlow::layoutRunsAndFloatsInRange(WebCore::LineLayoutState&, WebCore::BidiResolverWithIsolate<WebCore::InlineIterator, WebCore::BidiRun, WebCore::BidiIsolatedRun>&, WebCore::InlineIterator const&, WebCore::BidiStatus const&, unsigned int) 23 0x7f197a9af58e WebCore::RenderBlockFlow::layoutRunsAndFloats(WebCore::LineLayoutState&, bool) 24 0x7f197a9b1ed8 WebCore::RenderBlockFlow::layoutLineBoxes(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 25 0x7f197a98d1d5 WebCore::RenderBlockFlow::layoutInlineChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 26 0x7f197a98c51b WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 27 0x7f197ab30138 WebCore::RenderTableCell::layout() 28 0x7f197ab3984c WebCore::RenderTableRow::layout() 29 0x7f197a93213f WebCore::RenderElement::layoutIfNeeded() 30 0x7f197ab3bed1 WebCore::RenderTableSection::layout() 31 0x7f197a93213f WebCore::RenderElement::layoutIfNeeded() Error receiving IPC message on socket 40 in process 27687: Connection reset by peer Aborted (core dumped) Program terminated with signal SIGSEGV, Segmentation fault. #0 0x00007f197403daa4 in WTFCrash () at ../../Source/WTF/wtf/Assertions.cpp:321 321 *(int *)(uintptr_t)0xbbadbeef = 0; #0 0x00007f197403daa4 in WTFCrash () at ../../Source/WTF/wtf/Assertions.cpp:321 #1 0x00007f197a998481 in WebCore::RenderBlockFlow::getClearDelta (this=0x7f195b7b7450, child=..., logicalTop=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:2884 #2 0x00007f197a99015b in WebCore::RenderBlockFlow::estimateLogicalTopPosition (this=0x7f195b7b7450, child=..., marginInfo=..., estimateWithoutPagination=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:1285 #3 0x00007f197a98d28e in WebCore::RenderBlockFlow::layoutBlockChild (this=0x7f195b7b7450, child=..., marginInfo=..., previousFloatLogicalBottom=..., maxFloatLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:666 #4 0x00007f197a98d0db in WebCore::RenderBlockFlow::layoutBlockChildren (this=0x7f195b7b7450, relayoutChildren=true, maxFloatLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:632 #5 0x00007f197a98c53f in WebCore::RenderBlockFlow::layoutBlock (this=0x7f195b7b7450, relayoutChildren=true, pageLogicalHeight=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:485 #6 0x00007f197a95ecf6 in WebCore::RenderBlock::layout (this=0x7f195b7b7450) at ../../Source/WebCore/rendering/RenderBlock.cpp:931 #7 0x00007f197a93213f in WebCore::RenderElement::layoutIfNeeded (this=0x7f195b7b7450) at ../../Source/WebCore/rendering/RenderElement.h:135 #8 0x00007f197a99503f in WebCore::RenderBlockFlow::insertFloatingObject (this=0x7f195b7b7398, floatBox=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:2277 #9 0x00007f197aba704a in WebCore::LineBreaker::skipLeadingWhitespace (this=0x7ffd5bcced10, resolver=..., lineInfo=..., lastFloatFromPreviousLine=0x0, width=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:69 #10 0x00007f197aba72e7 in WebCore::LineBreaker::nextLineBreak (this=0x7ffd5bcced10, resolver=..., lineInfo=..., layoutState=..., renderTextInfo=..., lastFloatFromPreviousLine=0x0, consecutiveHyphenatedLines=0, wordMeasurements=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:90 #11 0x00007f197a9af9c1 in WebCore::RenderBlockFlow::layoutRunsAndFloatsInRange (this=0x7f195b7b7398, layoutState=..., resolver=..., cleanLineStart=..., cleanLineBidiStatus=..., consecutiveHyphenatedLines=0) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1264 #12 0x00007f197a9af58e in WebCore::RenderBlockFlow::layoutRunsAndFloats (this=0x7f195b7b7398, layoutState=..., hasInlineChild=false) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1217 #13 0x00007f197a9b1ed8 in WebCore::RenderBlockFlow::layoutLineBoxes (this=0x7f195b7b7398, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1647 #14 0x00007f197a98d1d5 in WebCore::RenderBlockFlow::layoutInlineChildren (this=0x7f195b7b7398, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:651 #15 0x00007f197a98c51b in WebCore::RenderBlockFlow::layoutBlock (this=0x7f195b7b7398, relayoutChildren=true, pageLogicalHeight=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:483 #16 0x00007f197a95ecf6 in WebCore::RenderBlock::layout (this=0x7f195b7b7398) at ../../Source/WebCore/rendering/RenderBlock.cpp:931 #17 0x00007f197a93213f in WebCore::RenderElement::layoutIfNeeded (this=0x7f195b7b7398) at ../../Source/WebCore/rendering/RenderElement.h:135 #18 0x00007f197a99503f in WebCore::RenderBlockFlow::insertFloatingObject (this=0x7f195b7d0320, floatBox=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:2277 #19 0x00007f197aba704a in WebCore::LineBreaker::skipLeadingWhitespace (this=0x7ffd5bcd0930, resolver=..., lineInfo=..., lastFloatFromPreviousLine=0x0, width=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:69 #20 0x00007f197aba72e7 in WebCore::LineBreaker::nextLineBreak (this=0x7ffd5bcd0930, resolver=..., lineInfo=..., layoutState=..., renderTextInfo=..., lastFloatFromPreviousLine=0x0, consecutiveHyphenatedLines=0, wordMeasurements=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:90 #21 0x00007f197a9af9c1 in WebCore::RenderBlockFlow::layoutRunsAndFloatsInRange (this=0x7f195b7d0320, layoutState=..., resolver=..., cleanLineStart=..., cleanLineBidiStatus=..., consecutiveHyphenatedLines=0) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1264 #22 0x00007f197a9af58e in WebCore::RenderBlockFlow::layoutRunsAndFloats (this=0x7f195b7d0320, layoutState=..., hasInlineChild=false) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1217 #23 0x00007f197a9b1ed8 in WebCore::RenderBlockFlow::layoutLineBoxes (this=0x7f195b7d0320, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1647 #24 0x00007f197a98d1d5 in WebCore::RenderBlockFlow::layoutInlineChildren (this=0x7f195b7d0320, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:651 #25 0x00007f197a98c51b in WebCore::RenderBlockFlow::layoutBlock (this=0x7f195b7d0320, relayoutChildren=true, pageLogicalHeight=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:483 #26 0x00007f197ab30138 in WebCore::RenderTableCell::layout (this=0x7f195b7d0320) at ../../Source/WebCore/rendering/RenderTableCell.cpp:266 #27 0x00007f197ab3984c in WebCore::RenderTableRow::layout (this=0x7f195b79fbe0) at ../../Source/WebCore/rendering/RenderTableRow.cpp:177 #28 0x00007f197a93213f in WebCore::RenderElement::layoutIfNeeded (this=0x7f195b79fbe0) at ../../Source/WebCore/rendering/RenderElement.h:135 #29 0x00007f197ab3bed1 in WebCore::RenderTableSection::layout (this=0x7f195b6da5c8) at ../../Source/WebCore/rendering/RenderTableSection.cpp:409 #30 0x00007f197a93213f in WebCore::RenderElement::layoutIfNeeded (this=0x7f195b6da5c8) at ../../Source/WebCore/rendering/RenderElement.h:135 #31 0x00007f197ab2231c in WebCore::RenderTable::layout (this=0x7f195b6ad000) at ../../Source/WebCore/rendering/RenderTable.cpp:466 #32 0x00007f197a93213f in WebCore::RenderElement::layoutIfNeeded (this=0x7f195b6ad000) at ../../Source/WebCore/rendering/RenderElement.h:135 #33 0x00007f197a99503f in WebCore::RenderBlockFlow::insertFloatingObject (this=0x7f195b7b72e0, floatBox=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:2277 #34 0x00007f197aba704a in WebCore::LineBreaker::skipLeadingWhitespace (this=0x7ffd5bcd2a00, resolver=..., lineInfo=..., lastFloatFromPreviousLine=0x0, width=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:69 #35 0x00007f197aba72e7 in WebCore::LineBreaker::nextLineBreak (this=0x7ffd5bcd2a00, resolver=..., lineInfo=..., layoutState=..., renderTextInfo=..., lastFloatFromPreviousLine=0x0, consecutiveHyphenatedLines=0, wordMeasurements=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:90 #36 0x00007f197a9af9c1 in WebCore::RenderBlockFlow::layoutRunsAndFloatsInRange (this=0x7f195b7b72e0, layoutState=..., resolver=..., cleanLineStart=..., cleanLineBidiStatus=..., consecutiveHyphenatedLines=0) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1264 #37 0x00007f197a9af58e in WebCore::RenderBlockFlow::layoutRunsAndFloats (this=0x7f195b7b72e0, layoutState=..., hasInlineChild=false) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1217 #38 0x00007f197a9b1ed8 in WebCore::RenderBlockFlow::layoutLineBoxes (this=0x7f195b7b72e0, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1647 #39 0x00007f197a98d1d5 in WebCore::RenderBlockFlow::layoutInlineChildren (this=0x7f195b7b72e0, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:651 #40 0x00007f197a98c51b in WebCore::RenderBlockFlow::layoutBlock (this=0x7f195b7b72e0, relayoutChildren=true, pageLogicalHeight=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:483 #41 0x00007f197a95ecf6 in WebCore::RenderBlock::layout (this=0x7f195b7b72e0) at ../../Source/WebCore/rendering/RenderBlock.cpp:931 #42 0x00007f197a93213f in WebCore::RenderElement::layoutIfNeeded (this=0x7f195b7b72e0) at ../../Source/WebCore/rendering/RenderElement.h:135 #43 0x00007f197a99503f in WebCore::RenderBlockFlow::insertFloatingObject (this=0x7f195b7b7228, floatBox=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:2277 #44 0x00007f197aba704a in WebCore::LineBreaker::skipLeadingWhitespace (this=0x7ffd5bcd4620, resolver=..., lineInfo=..., lastFloatFromPreviousLine=0x0, width=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:69 #45 0x00007f197aba72e7 in WebCore::LineBreaker::nextLineBreak (this=0x7ffd5bcd4620, resolver=..., lineInfo=..., layoutState=..., renderTextInfo=..., lastFloatFromPreviousLine=0x0, consecutiveHyphenatedLines=0, wordMeasurements=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:90 #46 0x00007f197a9af9c1 in WebCore::RenderBlockFlow::layoutRunsAndFloatsInRange (this=0x7f195b7b7228, layoutState=..., resolver=..., cleanLineStart=..., cleanLineBidiStatus=..., consecutiveHyphenatedLines=0) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1264 #47 0x00007f197a9af58e in WebCore::RenderBlockFlow::layoutRunsAndFloats (this=0x7f195b7b7228, layoutState=..., hasInlineChild=false) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1217 #48 0x00007f197a9b1ed8 in WebCore::RenderBlockFlow::layoutLineBoxes (this=0x7f195b7b7228, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1647 #49 0x00007f197a98d1d5 in WebCore::RenderBlockFlow::layoutInlineChildren (this=0x7f195b7b7228, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:651 #50 0x00007f197a98c51b in WebCore::RenderBlockFlow::layoutBlock (this=0x7f195b7b7228, relayoutChildren=true, pageLogicalHeight=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:483 #51 0x00007f197a95ecf6 in WebCore::RenderBlock::layout (this=0x7f195b7b7228) at ../../Source/WebCore/rendering/RenderBlock.cpp:931 #52 0x00007f197a93213f in WebCore::RenderElement::layoutIfNeeded (this=0x7f195b7b7228) at ../../Source/WebCore/rendering/RenderElement.h:135 #53 0x00007f197a99503f in WebCore::RenderBlockFlow::insertFloatingObject (this=0x7f195b6dd228, floatBox=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:2277 #54 0x00007f197aba704a in WebCore::LineBreaker::skipLeadingWhitespace (this=0x7ffd5bcd6240, resolver=..., lineInfo=..., lastFloatFromPreviousLine=0x0, width=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:69 #55 0x00007f197aba72e7 in WebCore::LineBreaker::nextLineBreak (this=0x7ffd5bcd6240, resolver=..., lineInfo=..., layoutState=..., renderTextInfo=..., lastFloatFromPreviousLine=0x0, consecutiveHyphenatedLines=0, wordMeasurements=...) at ../../Source/WebCore/rendering/line/LineBreaker.cpp:90 #56 0x00007f197a9af9c1 in WebCore::RenderBlockFlow::layoutRunsAndFloatsInRange (this=0x7f195b6dd228, layoutState=..., resolver=..., cleanLineStart=..., cleanLineBidiStatus=..., consecutiveHyphenatedLines=0) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1264 #57 0x00007f197a9af58e in WebCore::RenderBlockFlow::layoutRunsAndFloats (this=0x7f195b6dd228, layoutState=..., hasInlineChild=false) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1217 #58 0x00007f197a9b1ed8 in WebCore::RenderBlockFlow::layoutLineBoxes (this=0x7f195b6dd228, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockLineLayout.cpp:1647 #59 0x00007f197a98d1d5 in WebCore::RenderBlockFlow::layoutInlineChildren (this=0x7f195b6dd228, relayoutChildren=true, repaintLogicalTop=..., repaintLogicalBottom=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:651 #60 0x00007f197a98c51b in WebCore::RenderBlockFlow::layoutBlock (this=0x7f195b6dd228, relayoutChildren=true, pageLogicalHeight=...) at ../../Source/WebCore/rendering/RenderBlockFlow.cpp:483 #61 0x00007f197a95ecf6 in WebCore::RenderBlock::layout (this=0x7f195b6dd228) at ../../Source/WebCore/rendering/RenderBlock.cpp:931 #62 0x00007f197ab71cc5 in WebCore::RenderView::layoutContent (this=0x7f195b6dd228, state=...) at ../../Source/WebCore/rendering/RenderView.cpp:253 #63 0x00007f197ab723b8 in WebCore::RenderView::layout (this=0x7f195b6dd228) at ../../Source/WebCore/rendering/RenderView.cpp:378 #64 0x00007f197a740640 in WebCore::FrameView::layout (this=0x7f195b425540, allowSubtree=true) at ../../Source/WebCore/page/FrameView.cpp:1427 #65 0x00007f197a1a05a6 in WebCore::Document::implicitClose (this=0x7f195b426a40) at ../../Source/WebCore/dom/Document.cpp:2704 #66 0x00007f197a603cb9 in WebCore::FrameLoader::checkCallImplicitClose (this=0x7f195b6e4098) at ../../Source/WebCore/loader/FrameLoader.cpp:861 #67 0x00007f197a6039f0 in WebCore::FrameLoader::checkCompleted (this=0x7f195b6e4098) at ../../Source/WebCore/loader/FrameLoader.cpp:807 #68 0x00007f197a603760 in WebCore::FrameLoader::finishedParsing (this=0x7f195b6e4098) at ../../Source/WebCore/loader/FrameLoader.cpp:728 #69 0x00007f197a1aa474 in WebCore::Document::finishedParsing (this=0x7f195b426a40) at ../../Source/WebCore/dom/Document.cpp:4897 #70 0x00007f197b5187b7 in WebCore::HTMLConstructionSite::finishedParsing (this=0x7f195b6fe6e0) at ../../Source/WebCore/html/parser/HTMLConstructionSite.cpp:403 #71 0x00007f197a4fca62 in WebCore::HTMLTreeBuilder::finished (this=0x7f195b6fe6c0) at ../../Source/WebCore/html/parser/HTMLTreeBuilder.cpp:2937 #72 0x00007f197a4cd162 in WebCore::HTMLDocumentParser::end (this=0x7f195b42e840) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:393 #73 0x00007f197a4cd23b in WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd (this=0x7f195b42e840) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:402 #74 0x00007f197a4cbf1d in WebCore::HTMLDocumentParser::prepareToStopParsing (this=0x7f195b42e840) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:132 #75 0x00007f197a4cd27e in WebCore::HTMLDocumentParser::attemptToEnd (this=0x7f195b42e840) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:414 #76 0x00007f197a4cd335 in WebCore::HTMLDocumentParser::finish (this=0x7f195b42e840) at ../../Source/WebCore/html/parser/HTMLDocumentParser.cpp:442 #77 0x00007f197a5ef24c in WebCore::DocumentWriter::end (this=0x7f195b4249e0) at ../../Source/WebCore/loader/DocumentWriter.cpp:247 #78 0x00007f197a5d8b56 in WebCore::DocumentLoader::finishedLoading (this=0x7f195b424940, finishTime=0) at ../../Source/WebCore/loader/DocumentLoader.cpp:437 #79 0x00007f197a5d88b4 in WebCore::DocumentLoader::notifyFinished (this=0x7f195b424940, resource=0x7f195b436000) at ../../Source/WebCore/loader/DocumentLoader.cpp:384 #80 0x00007f197a683953 in WebCore::CachedResource::checkNotify (this=0x7f195b436000) at ../../Source/WebCore/loader/cache/CachedResource.cpp:297 #81 0x00007f197a683a62 in WebCore::CachedResource::finishLoading (this=0x7f195b436000) at ../../Source/WebCore/loader/cache/CachedResource.cpp:313 #82 0x00007f197a67fc56 in WebCore::CachedRawResource::finishLoading (this=0x7f195b436000, data=0x7f195b7bb680) at ../../Source/WebCore/loader/cache/CachedRawResource.cpp:103 #83 0x00007f197a6486f2 in WebCore::SubresourceLoader::didFinishLoading (this=0x7f195b42fa80, finishTime=0) at ../../Source/WebCore/loader/SubresourceLoader.cpp:372 #84 0x00007f197a6431d1 in WebCore::ResourceLoader::didFinishLoading (this=0x7f195b42fa80, finishTime=0) at ../../Source/WebCore/loader/ResourceLoader.cpp:638 #85 0x00007f197ae3ae84 in WebCore::readCallback (asyncResult=0xdb09d0, data=0x7f195b7bc680) at ../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:1341 #86 0x00007f19706295a6 in async_ready_callback_wrapper (source_object=0xcf79b0, res=0xdb09d0, user_data=0x7f195b7bc680) at ginputstream.c:523 #87 0x00007f197064fb74 in g_task_return_now (task=0xdb09d0) at gtask.c:1077 #88 0x00007f197064fb99 in complete_in_idle_cb (task=0xdb09d0) at gtask.c:1086 #89 0x00007f1970087add in g_main_dispatch (context=0xcf1c40) at gmain.c:3064 #90 g_main_context_dispatch (context=context@entry=0xcf1c40) at gmain.c:3663 #91 0x00007f19719f3e58 in _ecore_glib_select__locked (ecore_timeout=<optimized out>, efds=0x7ffd5bcd8480, wfds=0x7ffd5bcd8400, rfds=0x7ffd5bcd8380, ecore_fds=<optimized out>, ctx=<optimized out>) at lib/ecore/ecore_glib.c:172 #92 _ecore_glib_select (ecore_fds=<optimized out>, rfds=0x7ffd5bcd8380, wfds=0x7ffd5bcd8400, efds=0x7ffd5bcd8480, ecore_timeout=<optimized out>) at lib/ecore/ecore_glib.c:204 #93 0x00007f19719f74a4 in _ecore_main_select (timeout=9.532824124368238e-130) at lib/ecore/ecore_main.c:1459 #94 0x00007f19719f7ed4 in _ecore_main_loop_iterate_internal (once_only=once_only@entry=0) at lib/ecore/ecore_main.c:1893 #95 0x00007f19719f7fc7 in ecore_main_loop_begin () at lib/ecore/ecore_main.c:983 #96 0x00007f1974098995 in WTF::RunLoop::run () at ../../Source/WTF/wtf/efl/RunLoopEfl.cpp:49 #97 0x00007f1979f24c11 in WebKit::ChildProcessMain<WebKit::WebProcess, WebKit::WebProcessMain> (argc=2, argv=0x7ffd5bcd88b8) at ../../Source/WebKit2/Shared/unix/ChildProcessMain.h:61 #98 0x00007f1979f2481f in WebKit::WebProcessMainUnix (argc=2, argv=0x7ffd5bcd88b8) at ../../Source/WebKit2/WebProcess/efl/WebProcessMainEfl.cpp:161 #99 0x00000000004008ea in main (argc=2, argv=0x7ffd5bcd88b8) at ../../Source/WebKit2/WebProcess/EntryPoint/unix/WebProcessMain.cpp:44
Attachments
Test (150 bytes, text/html)
2015-11-12 10:41 PST, Renata Hodovan
no flags
Patch (6.45 KB, patch)
2017-01-09 15:29 PST, alan
no flags
Patch (6.46 KB, patch)
2017-01-09 15:54 PST, alan
no flags
Brent Fulgham
Comment 1 2016-08-04 18:29:21 PDT
This reproduces in r204037.
Radar WebKit Bug Importer
Comment 2 2016-08-04 18:30:01 PDT
alan
Comment 3 2017-01-09 15:29:36 PST
Myles C. Maxfield
Comment 4 2017-01-09 15:50:49 PST
Comment on attachment 298400 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=298400&action=review > LayoutTests/fast/block/float/assert-when-line-has-not-enough-space-left.html:15 > + testRunner.dumpAsText(); :(
alan
Comment 5 2017-01-09 15:54:52 PST
WebKit Commit Bot
Comment 6 2017-01-09 18:18:21 PST
Comment on attachment 298408 [details] Patch Clearing flags on attachment: 298408 Committed r210534: <http://trac.webkit.org/changeset/210534>
WebKit Commit Bot
Comment 7 2017-01-09 18:18:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.